--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,17 @@ a{
         transition: all 0.5s;
         outline: none;
 }
+
+span.extax {
+        font-size: 13px;
+        font-weight: 600;
+        font-family: 'Lato', sans-serif;
+        text-align: left;
+        margin-bottom: 10px;
+        margin-top: 9px;
+        line-height: 24px;
+        color: #969696;
+}
 ::selection {
         background: #fdbc73; /* WebKit/Blink Browsers */
 }
