--- a/css/style.css
+++ b/css/style.css
@@ -2854,6 +2854,7 @@ select.chris-select {
         border-bottom: 1px solid #ccc;
         padding-bottom: 10px;
         color:#333333;
+        padding-bottom: 50px;
 }
 
 .india-aboutus h1 {
