--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,78 @@ a{
         transition: all 0.5s;
         outline: none;
 }
+//////////////////////////
+.dropbtna {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
 
+/* The container <div> - needed to position the dropdown content */
+.dropdowna {
+    position: relative;
+    display: inline-block;
+    background-color: #fff;
+    font-size: 13px;
+    color: #333;
+    border-radius: 0;
+    height: 28px;
+    font-family: 'Roboto', sans-serif;
+    padding-top: 5px;
+    margin-top: -3px;
+    width: 80px;
+    padding-left: 0;
+    padding-right: 0;
+    display: block;
+    margin-bottom: 22px;
+    text-align: left;
+    float: right;
+    /* text-transform: uppercase; */
+    text-decoration: none;
+}
+.dropdowna:hover{
+    background-color: #333;
+    color: #fff;
+    border-radius: 20px;
+    }
+/* Dropdown Content (Hidden by Default) */
+.dropdown-contenta {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+            margin-top: 25px;
+}
+
+/* Links inside the dropdown */
+.dropdown-contenta a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-contenta a:hover {
+    background-color: #000;
+    color:#fff;
+}
+
+/* Show the dropdown menu on hover */
+.dropdowna:hover .dropdown-contenta {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdowna:hover .dropbtna {
+   // background-color: #3e8e41;
+}
+///////////////////////////////////////////////////////
 span.extax {
         font-size: 13px;
         font-weight: 600;
