--- a/css/style.css
+++ b/css/style.css
@@ -2417,6 +2417,7 @@ section.popup {
         padding-bottom: 6px;
         font-size: 13px;
         color: #666;
+        text-align: center;
 }
 .ins1 {
         float: left;
@@ -2426,6 +2427,7 @@ section.popup {
         background-color: #f4f4f4;
         height: auto;
         padding-left: 12px;
+        border-right: 1px solid #000;
 }
 
 .ins2 {
