--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,69 @@ body{
 :focus {outline:none !important;}
 
 input:focus, select:focus, textarea:focus, button:focus { outline: none; }
+.has_dropdown {
+    position: relative;
+    cursor: pointer;
+}
+.has_dropdown .currency_drop {
+    background-color: #737179;
+    top: 100%;
+    box-shadow: none;
+    border: none;
+    padding: 0px;
+    padding-top: 12px;
+    right: 4px;
+    min-width: 70px;
+}
+.has_dropdown .drop_menu {
+    font-size: 13px;
+    line-height: 20px;
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+    display: block;
+}
+.has_dropdown .currency_drop ul li {
+    color: #fff;
+    border-bottom: 0px;
+    padding: 4px 8px;
+    margin: 0px;
+    line-height: 20px;
+}
+.has_dropdown .drop_menu li a {
+    color: #414042;
+}
+.laksyah_dropdown {
+    position: absolute;
+    min-width: 150px;
+    padding: 2px 10px;
+    border: solid 2px #737179;
+    top: 94%;
+    box-shadow: 0px 0px 5px rgba(0,0,0,0.54);
+    display: none;
+    background: #fff;
+    z-index: 3000;
+}
+.top-bar ul li {
+    display: inline-block;
+    margin-right: 25px;
+    font-size: 11px;
+    text-transform: uppercase;
+}
+
+ul.list-unstyled.abt li {
+    font-size: 11px;
+    color: #000 !important;
+}
+ul.list-unstyled.abt li a{
+    color: #000 !important;
+}
+.top-bar div {
+    display: inline-block;
+    margin-right: 25px;
+    font-size: 11px;
+    text-transform: uppercase;
+}
 a{
         text-decoration: none;
         -moz-transition: all 0.5s;
@@ -1452,7 +1515,7 @@ input.cont{
 .form-comment2 {
         display: block;
         width: 100%;
-        height: 277px;
+        height: 195px;
         padding: 8px 12px;
         font-size: 14px;
         line-height: 1.42857143;
