--- a/css/custom.css
+++ b/css/custom.css
@@ -21,7 +21,7 @@ button.btn-primary.empty_cart {
 }
 
 img.zoom {
-        height: 141px;
+        /*height: 141px;*/
         overflow-y: hidden;
 }
 .red{
