--- a/css/style.css
+++ b/css/style.css
@@ -922,10 +922,23 @@ span.unit {
         float: left;
         width: 50%;
 }
-
 .btn-place-2 {
         float: left;
         width: 50%;
+}
+
+.btn-place-3 {
+        float: left;
+        width: 33%;
+        padding: 0px 15px;
+        margin-bottom: 30px;
+}
+
+.btn-place-3 .left-btns{
+        width: 100%;
+}
+.head-33{
+        width: 33% !important;
 }
 .right-btn {
         float: right;
