--- a/css/menu.css
+++ b/css/menu.css
@@ -28,7 +28,7 @@
     line-height: 1.42857143;
     color: #333;
     white-space: nowrap;
-    background-color: #DCDADA;
+    /*background-color: #DCDADA;*/
     border-top: 0;
     font-size: 13px;
     color: #333;
